--- a/res/layout/weather_layout.xml
+++ b/res/layout/weather_layout.xml
@@ -7,8 +7,16 @@
     <RelativeLayout 
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#484e61"
+        android:background="#484E61"
         >
+        <Button 
+            android:id="@+id/switch_city"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/home"
+            />
         
         <TextView
             android:id="@+id/city_name"
@@ -17,6 +25,15 @@
             android:layout_centerInParent="true"
             android:textColor="#fff"
             android:textSize="24sp" 
+            />
+        <Button 
+            android:id="@+id/refresh_weather"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/refresh"
             />
     </RelativeLayout>
     
